@@ -260,6 +260,14 @@
               "type": "array",
               "uniqueItems": true
             },
+            "name": {
+              "items": {
+                "type": "string"
+              },
+              "minItems": 1,
+              "type": "array",
+              "uniqueItems": true
+            },
             "notes": {
               "type": "string"
             },
